# AI-Collaboration-Hub

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  README.md  SECURITY_DASHBOARD.md  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: all-projects-sanity.yml  autonomous-agent.yml  health_cycle.yml  lint-autofix.yml  lockfile-validation.yml  python-checks.yml  registry-check.yml  registry-sync.yml  self-evolve.yml  solutions-dynamics.yml
AI-Collaboration-Hub/: README.md
AI-Collaboration-Hub/nexus-core/: README.md  graph.md  orchestrator.py
AI-Collaboration-Hub/userscript/: main.user.js
VectorFS/: .gitignore  ARCHITECTURE.md  BUILD_VECTORFS.md  CMakeLists.txt  DENSE_CORE.md  DEVELOPMENT.md  LICENSE  README.md  SPEC.md
VectorFS/.github/workflows/: build.yml  stale.yml
VectorFS/branches/: branch.h  branch_ops.cpp  branch_ops.h  branch_store.cpp  branch_store.h
VectorFS/cas/: blob.cpp  blob.h  cas.h  cas_backend_fs.cpp  cas_backend_fs.h  cas_backend_gpu.cpp  cas_backend_gpu.h  cas_backend_mem.cpp  cas_backend_mem.h  cas_index.cpp  cas_index.h  cas_store.cpp  cas_store.h  file_cas_backend.cpp  file_cas_backend.h  hash.cpp  hash.h  inmemory_cas.h
VectorFS/core/: checksum.cpp  checksum.h  commit_boundary.cpp  commit_boundary.h  hash.cpp  hash_node.cpp  hash_util.h  invariant.h  journal.cpp  journal.h  journal_segment.cpp  journal_segment.h  lock_manager.cpp  lock_manager.h  model.h  node.cpp  node.h  recovery_replay.cpp  recovery_replay.h  replay.cpp  replay.h  replay_cursor.cpp  replay_cursor.h  serializer.cpp  serializer.h  superblock.h  transaction.h
VectorFS/docs/: CANONICAL_MODEL.md  FAILURE_MODEL.md  GC_MODEL.md  HIGHEST_VALUE_ACTIONS.md  KERNEL_SPEC.md  REPLAY_MODEL.md  ROADMAP.md  System_Improvements_V2.md  architecture.md  compat.md  invariant.md  resource_orchestrator.md  runtime.md  snapshots.md  triage_tasks.md
VectorFS/fuse/: vectorfs.cpp
VectorFS/gc/: gc.cc  gc.h  gc_mark.cc  gc_mark.h  gc_runner.cpp  gc_runner.h  gc_state.h  gc_stats.cpp  gc_stats.h  gc_sweep.cc  gc_sweep.h  liveness.cpp  liveness.h  liveness_index.cpp  liveness_index.h  mark.cpp  mark.h  streaming_gc.cpp  streaming_gc.h  sweep.cpp  sweep.h
VectorFS/gpu/: gpu_cache.cpp  gpu_cache.h  gpu_page.h  residency.h
VectorFS/include/: block_splitter.h  cas.h  clone.h  directory_codec.h  fuse_ops.h  gc.h  hash.h  inode_table.h  journal.h  metadata_store.h  node.h  persistence.h  snapshot.h  superblock.h  vectorfs_dense.h
VectorFS/metadata/: dir_entry.cpp  dir_entry.h  directory.cpp  directory.h  inode.cpp  inode.h  lineage.h  metadata_gc.cpp  metadata_gc.h  metadata_serializer.cpp  metadata_serializer.h  metadata_store.cpp  metadata_store.h  metadata_txn.cpp  metadata_txn.h  path_resolver.cpp  path_resolver.h  stat.cpp  stat.h  symlink.cpp  symlink.h
VectorFS/mkfs/: mkfs.vectorfs.cpp
VectorFS/omega-cache/: gpu_block.h  omega_cache.cpp  omega_cache.h
VectorFS/releases/: vectorfs.dense.user.js  vectorfs.kernel.user.js  vectorfs.min.user.js  vectorfs.readable.user.js  vectorfs.release.json  vectorfs.user.js
VectorFS/releases/modules/: compress.js  replay.js  scheduler.js
VectorFS/runtime/: resource_ledger.json
VectorFS/scripts/: format.sh  mount.sh  umount.sh
VectorFS/src/: block_splitter.cpp  cas.cpp  clone.cpp  directory_codec.cpp  fuse_ops.cpp  gc.cpp  hash.cpp  inode_table.cpp  journal.cpp  metadata_store.cpp  metadata_store.h  persistence.cpp  snapshot.cpp  superblock.cpp  vectorfs_dense.cpp
VectorFS/tests/: branch_checkout.cpp  replay_recovery.cpp  replay_smoke.cpp  replay_validation.cpp  smoke_reachability.cpp  smoke_transaction.cpp  test_cas.cpp  test_dense.cpp  test_gc.cpp  test_main.cpp  test_node.cpp  test_snapshot.cpp
VectorFS/tests/python/: test_resource_orchestrator.py
VectorFS/tools/: fsck.vectorfs.cpp  resource_orchestrator.py
autonomous-github-agent/: README.md  agent-runner.yml
autonomous-github-agent/.github/: COMPLETED_DATA_SET.md  automate-repos.sh  controller.py  executor.py  policy.py  router.py
autonomous-github-agent/docs/: completed_catalyst_dataset.md
nexus-core/: registry.json
nexus-infinity-hub/: README.md  bun.lockb  package-lock.json  package.json  tailwind.config.ts
nexus-infinity-hub/modules/: 00-utilities.module.user.js  01-automation.module.user.js  02-error-handling.module.user.js  03-user-interface.module.user.js  04-feedback.module.user.js  05-prompt-splitter.module.user.js  (+2 more)
self-evolve-dash/: .gitignore  IMPROVEMENTS_V2.md  OFFLINE_MODE.md  README.md  SYSTEM_IMPROVEMENTS.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
singularity-operator/: .gitignore  requirements-dev.txt
solutions-dynamics/: __init__.py  extended_failure_handler.py  runtime_failure_handler.py
third-door-blink-controller/: package-lock.json  package.json
third-door-system/: README.md
tools/: bootstrap.ps1  health-check.ps1  verify-workspace.ps1
(+131 files in other folders)
